--- a/tasks/Linux/install-hostpath-provisioner.yml
+++ b/tasks/Linux/install-hostpath-provisioner.yml
@@ -16,5 +16,6 @@
 
     - name: Install hostpath-provisioner
       command: >
-        helm upgrade -i hostpath-provisioner rimusz/hostpath-provisioner --namespace kube-system --wait --force --recreate-pods
+        helm install --name hostpath-provisioner rimusz/hostpath-provisioner --namespace kube-system
+        #helm upgrade -i hostpath-provisioner rimusz/hostpath-provisioner --namespace kube-system --wait --force --recreate-pods
   when: helm_status.stdout == ""
