--- a/tasks/Linux/install-hostpath-provisioner.yml
+++ b/tasks/Linux/install-hostpath-provisioner.yml
@@ -10,13 +10,11 @@
       shell: helm repo add rimusz https://charts.rimusz.net
       become: true
 
-    - name: Update helm repo
-      shell: helm repo update
-      become: true
+    # - name: Update helm repo
+    #   shell: helm repo update
+    #   become: true
 
     - name: Install hostpath-provisioner
       shell: >
-        helm install --name hostpath-provisioner rimusz/hostpath-provisioner --namespace kube-system
+        helm upgrade -i hostpath-provisioner rimusz/hostpath-provisioner --namespace kube-system --wait --force --recreate-pods
   when: helm_status.stdout == ""
-
-#helm upgrade -i hostpath-provisioner rimusz/hostpath-provisioner --namespace kube-system --wait --force --recreate-pods
