--- a/tasks/Linux/install-hostpath-provisioner.yml
+++ b/tasks/Linux/install-hostpath-provisioner.yml
@@ -15,10 +15,10 @@
       become: true
 
     - name: Download hostpath-provisioner chart
-      shell: helm fetch rimusz/hostpath-provisioner --untar -d /tmp
+      shell: helm fetch rimusz/hostpath-provisioner --version 0.2.9 -d /tmp
       become: true
 
     - name: Install hostpath-provisioner
       shell: >
-        helm upgrade -i hostpath-provisioner /tmp/hostpath-provisioner --namespace kube-system --wait --force --recreate-pods
+        helm upgrade -i hostpath-provisioner /tmp/hostpath-provisioner-0.2.9.tgz --namespace kube-system --wait --force --recreate-pods
   when: helm_status.stdout == ""
