--- a/tasks/Linux/master-setup.yml
+++ b/tasks/Linux/master-setup.yml
@@ -87,5 +87,7 @@
     - helm_is_installed.rc == 0
     - helm_current_version.stdout.split('.')[0] == 'v2'
 
+- import_tasks: add-helm-repos.yml
+
 - import_tasks: install-hostpath-provisioner.yml
   when: kubernetes_install_hostpath_provisioner | bool
