--- a/tasks/Linux/install-hostpath-provisioner.yml
+++ b/tasks/Linux/install-hostpath-provisioner.yml
@@ -7,11 +7,11 @@
 
 - block:
     - name: Download hostpath-provisioner chart
-      shell: helm fetch rimusz/hostpath-provisioner --version 0.2.9 -d /tmp
+      shell: helm fetch rimusz/hostpath-provisioner --version {{ kubernetes_hostpath_provisioner_version }} -d /tmp
 
     - name: Install hostpath-provisioner
       shell: >
-        helm upgrade -i hostpath-provisioner /tmp/hostpath-provisioner-0.2.9.tgz
+        helm upgrade -i hostpath-provisioner /tmp/hostpath-provisioner-{{ kubernetes_hostpath_provisioner_version }}.tgz
           --namespace kube-system --wait --force --recreate-pods
   become: true
   when: helm_status.stdout == ""
