--- a/tasks/Linux/install-nginx-ingress.yml
+++ b/tasks/Linux/install-nginx-ingress.yml
@@ -1,24 +1,23 @@
 ---
-- name: Check if hostpath-provisioner is installed
+- name: Check if nginx-ingress is installed
   shell: helm list nginx-ingress --deployed
   register: helm_status
   changed_when: false
   become: true
 
 - block:
-    - name: Add stable helm repo
-      shell: helm repo add stable https://charts.rimusz.net
-      become: true
+    - name: Download nginx-ingress chart
+      shell: helm fetch stable/nginx-ingress --version {{ kubernetes_nginx_ingress_version }} -d /tmp
 
-    - name: Update helm repo
-      shell: helm repo update
-      become: true
+    - name: Copy nginx-ingress vlaues file
+      template:
+        src: nginx-ingress-values.yml.j2
+        dest: /tmp/nginx-ingress-values.yml
 
-    - name: Download hostpath-provisioner chart
-      shell: helm fetch stable/nginx-ingress --version 1.41.2 -d /tmp
-      become: true
-
-    - name: Install hostpath-provisioner
+    - name: Install nginx-ingress
       shell: >
-        helm upgrade -i hostpath-provisioner /tmp/hostpath-provisioner-0.2.9.tgz --namespace kube-system --wait --force --recreate-pods
+        helm upgrade -i nginx-ingress /tmp/nginx-ingress-{{ kubernetes_nginx_ingress_version }}.tgz
+          -f /tmp/nginx-ingress-values.yml
+          --namespace kube-system --wait --force --recreate-pods
+  become: true
   when: helm_status.stdout == ""
