--- a/tasks/Linux/master-setup.yml
+++ b/tasks/Linux/master-setup.yml
@@ -91,3 +91,6 @@
 
 - import_tasks: install-hostpath-provisioner.yml
   when: kubernetes_install_hostpath_provisioner | bool
+
+- import_tasks: install-nginx-ingress.yml
+  when: kubernetes_install_nginx_ingress | bool
