--- a/tasks/Linux/install-nginx-ingress.yml
+++ b/tasks/Linux/install-nginx-ingress.yml
@@ -15,8 +15,8 @@
         dest: /tmp/nginx-ingress-values.yml
 
     - name: Install nginx-ingress
-      shell: >
-        helm upgrade -i -f /tmp/nginx-ingress-values.yml nginx-ingress /tmp/nginx-ingress-{{ kubernetes_nginx_ingress_version }}.tgz
+      shell: |
+        helm upgrade -i -f /tmp/nginx-ingress-values.yml nginx-ingress /tmp/nginx-ingress-{{ kubernetes_nginx_ingress_version }}.tgz \
           --namespace kube-system --wait --force --recreate-pods
   become: true
   when: helm_status.stdout == ""
