--- a/tasks/Linux/install-nginx-ingress.yml
+++ b/tasks/Linux/install-nginx-ingress.yml
@@ -16,7 +16,8 @@
 
     - name: Install nginx-ingress
       shell: |
-        helm upgrade -i -f /tmp/nginx-ingress-values.yml nginx-ingress /tmp/nginx-ingress-{{ kubernetes_nginx_ingress_version }}.tgz \
+        helm upgrade -i nginx-ingress /tmp/nginx-ingress-{{ kubernetes_nginx_ingress_version }}.tgz \
+          -f /tmp/nginx-ingress-values.yml \
           --namespace kube-system --wait --force --recreate-pods
   become: true
   when: helm_status.stdout == ""
