--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -37,3 +37,6 @@ kubernetes_hostpath_provisioner_version: 0.2.9
 
 kubernetes_install_nginx_ingress: true
 kubernetes_nginx_ingress_version: 1.41.2
+
+kubernetes_install_metrics_server: true
+kubernetes_metrics_server_version: 2.11.1
