--- a/tasks/Linux/master-setup.yml
+++ b/tasks/Linux/master-setup.yml
@@ -94,3 +94,6 @@
 
 - import_tasks: install-nginx-ingress.yml
   when: kubernetes_install_nginx_ingress | bool
+
+- import_tasks: install-metrics-server.yml
+  when: kubernetes_install_metrics_server | bool
