--- a/tasks/Linux/install-hostpath-provisioner.yml
+++ b/tasks/Linux/install-hostpath-provisioner.yml
@@ -12,6 +12,6 @@
     - name: Install hostpath-provisioner
       shell: |
         helm upgrade -i hostpath-provisioner /tmp/hostpath-provisioner-{{ kubernetes_hostpath_provisioner_version }}.tgz \
-          --namespace kube-system --wait --force --recreate-pods
+          --namespace kube-system --force --recreate-pods
   become: true
   when: helm_status.stdout == ""
