--- a/tasks/Linux/install-nginx-ingress.yml
+++ b/tasks/Linux/install-nginx-ingress.yml
@@ -18,6 +18,6 @@
       shell: |
         helm upgrade -i nginx-ingress /tmp/nginx-ingress-{{ kubernetes_nginx_ingress_version }}.tgz \
           -f /tmp/nginx-ingress-values.yml \
-          --namespace kube-system --wait --force --recreate-pods
+          --namespace kube-system --force --recreate-pods
   become: true
   when: helm_status.stdout == ""
