--- a/tasks/Linux/install-metrics-server.yml
+++ b/tasks/Linux/install-metrics-server.yml
@@ -18,6 +18,6 @@
       shell: |
         helm upgrade -i metrics-server /tmp/metrics-server-{{ kubernetes_metrics_server_version }}.tgz \
           -f /tmp/metrics-server-values.yml \
-          --namespace kube-system --wait --force --recreate-pods
+          --namespace kube-system --force --recreate-pods
   become: true
   when: helm_status.stdout == ""
