--- a/tasks/Linux/master-setup.yml
+++ b/tasks/Linux/master-setup.yml
@@ -1,6 +1,6 @@
 ---
 - debug:
-    msg: >
+    msg: |
       {% if no_proxy is defined %}
       "{{ no_proxy.split(',') | union(['127.0.0.0/8','10.0.0.0/8','172.16.0.0/12','192.168.0.0/16']) | join(',') }}"
       {% else %}
