--- a/tasks/Linux/master-setup.yml
+++ b/tasks/Linux/master-setup.yml
@@ -2,9 +2,9 @@
 - debug:
     msg: |
       {% if no_proxy is defined %}
-      "{{ no_proxy.split(',') | union(['127.0.0.0/8','10.0.0.0/8','172.16.0.0/12','192.168.0.0/16']) | join(',') }}"
+      {{ no_proxy.split(',') | union(['127.0.0.0/8','10.0.0.0/8','172.16.0.0/12','192.168.0.0/16']) | join(',') }}
       {% else %}
-      "{{ omit }}"
+      {{ omit }}
       {% endif %}
 
 - name: Initialize Kubernetes master with kubeadm init
