--- a/tasks/Linux/master-setup.yml
+++ b/tasks/Linux/master-setup.yml
@@ -1,7 +1,4 @@
 ---
-- debug:
-    msg: "{% if no_proxy is defined %}{{ no_proxy.split(',') | union(['127.0.0.0/8','10.0.0.0/8','172.16.0.0/12','192.168.0.0/16']) | join(',') }}{%else %}{{ omit }}{% endif %}"
-
 - name: Initialize Kubernetes master with kubeadm init
   command: >
     kubeadm init
@@ -17,12 +14,7 @@
     --pod-network-cidr={{ kubernetes_pod_network.cidr }}
     {{ kubernetes_kubeadm_init_extra_opts }}
   environment:
-    no_proxy: >
-      {% if no_proxy is defined %}
-      "{{ no_proxy.split(',') | union(['127.0.0.0/8','10.0.0.0/8','172.16.0.0/12','192.168.0.0/16']) | join(',') }}"
-      {% else %}
-      "{{ omit }}"
-      {% endif %}
+    no_proxy: "{% if no_proxy is defined %}{{ no_proxy.split(',') | union(['127.0.0.0/8','10.0.0.0/8','172.16.0.0/12','192.168.0.0/16']) | join(',') }}{%else %}{{ omit }}{% endif %}"
   register: kubeadmin_init
   become: true
   when: not kubernetes_init_stat.stat.exists
