--- a/tasks/Linux/master-setup.yml
+++ b/tasks/Linux/master-setup.yml
@@ -15,6 +15,7 @@
     {{ kubernetes_kubeadm_init_extra_opts }}
   environment:
     no_proxy: "{% if no_proxy is defined %}{{ no_proxy.split(',') | union(['127.0.0.0/8','10.0.0.0/8','172.16.0.0/12','192.168.0.0/16']) | join(',') }}{%else %}{{ omit }}{% endif %}"
+    NO_PROXY: "{% if no_proxy is defined %}{{ no_proxy.split(',') | union(['127.0.0.0/8','10.0.0.0/8','172.16.0.0/12','192.168.0.0/16']) | join(',') }}{%else %}{{ omit }}{% endif %}"
   register: kubeadmin_init
   become: true
   when: not kubernetes_init_stat.stat.exists
