--- a/tasks/Linux/master-setup.yml
+++ b/tasks/Linux/master-setup.yml
@@ -1,8 +1,8 @@
 ---
 - debug:
-    msg: "{{ ansible_env.HTTP_PROXY }}"
+    msg: "{{ ansible_env.no }}"
 # - set_fact:
-#     kubernetes_no_proxy: "{{ lookup('env','no_proxy').split(',') | union(['127.0.0.0/8','10.0.0.0/8','172.16.0.0/12','192.168.0.0/16']) | join(',') }}"
+#     kubernetes_no_proxy: "{{ ansible_env.no_proxy.split(',') | union(['127.0.0.0/8','10.0.0.0/8','172.16.0.0/12','192.168.0.0/16']) | join(',') }}"
 #   when: lookup('env','no_proxy') is defined
 
 # - name: Initialize Kubernetes master with kubeadm init
