--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -40,3 +40,6 @@ kubernetes_nginx_ingress_version: 1.41.2
 
 kubernetes_install_metrics_server: true
 kubernetes_metrics_server_version: 2.11.1
+
+kubernetes_install_prometheus_operator: true
+kubernetes_prometheus_operator_version: 9.0.1
