--- a/tasks/Linux/install-prometheus-operator.yml
+++ b/tasks/Linux/install-prometheus-operator.yml
@@ -45,10 +45,10 @@
         src: prometheus-operator-values.yml.j2
         dest: /tmp/prometheus-operator-values.yml
 
-    # - name: Install prometheus-operator
-    #   shell: |
-    #     helm upgrade -i prometheus-operator /tmp/prometheus-operator-{{ kubernetes_prometheus_operator_version }}.tgz \
-    #       -f /tmp/prometheus-operator-values.yml \
-    #       --namespace {{ kubernetes_prometheus_operator_namespace }} --force --recreate-pods
+    - name: Install prometheus-operator
+      shell: |
+        helm upgrade -i prometheus-operator /tmp/prometheus-operator-{{ kubernetes_prometheus_operator_version }}.tgz \
+          -f /tmp/prometheus-operator-values.yml \
+          --namespace {{ kubernetes_prometheus_operator_namespace }} --force --recreate-pods
   become: true
   when: helm_status.stdout == ""
