--- a/tasks/Linux/install-metrics-server.yml
+++ b/tasks/Linux/install-metrics-server.yml
@@ -19,5 +19,10 @@
         helm upgrade -i metrics-server /tmp/metrics-server-{{ kubernetes_metrics_server_version }}.tgz \
           -f /tmp/metrics-server-values.yml \
           --namespace kube-system --force --recreate-pods
+      register: install_result
+
+    - name: Print the install output to screen
+      debug:
+        msg: "{{ install_result.stdout_lines }}"
   become: true
   when: helm_status.stdout == ""
