--- a/tasks/Linux/master-setup.yml
+++ b/tasks/Linux/master-setup.yml
@@ -106,5 +106,8 @@
 - import_tasks: install-metrics-server.yml
   when: kubernetes_install_metrics_server | bool
 
+- import_tasks: install-kubernetes-dashboard.yml
+  when: kubernetes_install_dashboard | bool
+
 - import_tasks: install-prometheus-operator.yml
   when: kubernetes_install_prometheus_operator | bool
