--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -41,6 +41,10 @@ kubernetes_nginx_ingress_version: 1.41.2
 kubernetes_install_metrics_server: true
 kubernetes_metrics_server_version: 2.11.1
 
+kubernetes_install_dashboard: true
+kubernetes_dashboard_version: 2.3.0
+kubernetes_dashboard_namespace: kube-ops
+
 kubernetes_install_prometheus_operator: true
 kubernetes_prometheus_operator_version: 9.0.1
 kubernetes_prometheus_operator_namespace: kube-ops
