--- a/tasks/Linux/install-prometheus-operator.yml
+++ b/tasks/Linux/install-prometheus-operator.yml
@@ -7,21 +7,20 @@
 
 - block:
     - name: Create namespace {{ kubernetes_prometheus_operator_namespace }}
-      shell: |
-        kubectl get ns {{ kubernetes_prometheus_operator_namespace }} || \
-          kubectl create ns {{ kubernetes_prometheus_operator_namespace }}
+      shell: kubectl create ns {{ kubernetes_prometheus_operator_namespace }}
       register: result
       changed_when: "'created' in result.stdout"
+      failed_when: "result.rc != 0 and 'already exists' not in result.stderr"
 
     - name: Create secret etcd-certs
       shell: |
-        kubectl -n {{ kubernetes_prometheus_operator_namespace }} get secret etcd-certs || \
         kubectl -n {{ kubernetes_prometheus_operator_namespace }} create secret generic etcd-certs \
           --from-file=/etc/kubernetes/pki/etcd/healthcheck-client.crt \
           --from-file=/etc/kubernetes/pki/etcd/healthcheck-client.key \
           --from-file=/etc/kubernetes/pki/etcd/ca.crt
       register: result
       changed_when: "'created' in result.stdout"
+      failed_when: "result.rc != 0 and 'already exists' not in result.stderr"
 
     - name: Modify kube-proxy configmap
       shell: |
