--- a/tasks/Linux/install-hostpath-provisioner.yml
+++ b/tasks/Linux/install-hostpath-provisioner.yml
@@ -12,7 +12,7 @@
     - name: Install hostpath-provisioner
       shell: |
         helm upgrade -i hostpath-provisioner /tmp/hostpath-provisioner-{{ kubernetes_hostpath_provisioner_version }}.tgz \
-          --namespace kube-system --force --recreate-pods
+          --namespace kube-system --force
       register: install_result
 
     - name: Print the install output to screen
