--- a/tasks/Linux/install-nginx-ingress.yml
+++ b/tasks/Linux/install-nginx-ingress.yml
@@ -18,7 +18,7 @@
       shell: |
         helm upgrade -i nginx-ingress /tmp/nginx-ingress-{{ kubernetes_nginx_ingress_version }}.tgz \
           -f /tmp/nginx-ingress-values.yml \
-          --namespace kube-system --force --recreate-pods
+          --namespace kube-system --force
       register: install_result
 
     - name: Print the install output to screen
