--- a/tasks/Linux/install-hostpath-provisioner.yml
+++ b/tasks/Linux/install-hostpath-provisioner.yml
@@ -1,7 +1,7 @@
 ---
 - name: Check if hostpath-provisioner is installed
-  shell: helm list hostpath-provisioner --deployed
-  register: helm_status
+  shell: helm list --deployed | grep -q '^hostpath-provisioner '
+  register: install_status
   changed_when: false
   become: true
 
@@ -19,4 +19,4 @@
       debug:
         msg: "{{ install_result.stdout_lines }}"
   become: true
-  when: helm_status.stdout == ""
+  when: install_status.rc != 0
