--- a/tasks/Linux/install-metrics-server.yml
+++ b/tasks/Linux/install-metrics-server.yml
@@ -1,7 +1,7 @@
 ---
 - name: Check if metrics-server is installed
-  shell: helm list metrics-server --deployed
-  register: helm_status
+  shell: helm list --deployed | grep -q '^metrics-server '
+  register: install_status
   changed_when: false
   become: true
 
@@ -25,4 +25,4 @@
       debug:
         msg: "{{ install_result.stdout_lines }}"
   become: true
-  when: helm_status.stdout == ""
+  when: install_status.rc != 0
