--- a/tasks/Linux/install-nginx-ingress.yml
+++ b/tasks/Linux/install-nginx-ingress.yml
@@ -1,7 +1,7 @@
 ---
 - name: Check if nginx-ingress is installed
-  shell: helm list nginx-ingress --deployed
-  register: helm_status
+  shell: helm list --deployed | grep -q '^nginx-ingress '
+  register: install_status
   changed_when: false
   become: true
 
@@ -25,4 +25,4 @@
       debug:
         msg: "{{ install_result.stdout_lines }}"
   become: true
-  when: helm_status.stdout == ""
+  when: install_status.rc != 0
