--- a/tasks/Linux/install-hostpath-provisioner.yml
+++ b/tasks/Linux/install-hostpath-provisioner.yml
@@ -1,6 +1,6 @@
 ---
 - name: Check if hostpath-provisioner is installed
-  shell: helm list --deployed | grep -q '^hostpath-provisioner '
+  shell: helm list --deployed | grep '^hostpath-provisioner ' | wc -l
   register: install_status
   changed_when: false
   become: true
@@ -19,4 +19,4 @@
       debug:
         msg: "{{ install_result.stdout_lines }}"
   become: true
-  when: install_status.rc != 0
+  when: install_status.stdout == '0'
