--- a/tasks/Linux/install-nginx-ingress.yml
+++ b/tasks/Linux/install-nginx-ingress.yml
@@ -1,6 +1,6 @@
 ---
 - name: Check if nginx-ingress is installed
-  shell: helm list --deployed {% if helm_current_version.stdout.split('.')[0] != 'v2' %}--all-namespaces{% endif %} | grep '^nginx-ingress ' | wc -l
+  shell: helm list --deployed {% if helm_current_version.stdout.split('.')[0] != 'v2' %}--all-namespaces{% endif %} | grep '^nginx-ingress\s' | wc -l
   register: install_status
   changed_when: false
   become: true
