--- a/tasks/Linux/install-prometheus-operator.yml
+++ b/tasks/Linux/install-prometheus-operator.yml
@@ -1,6 +1,6 @@
 ---
 - name: Check if prometheus-operator is installed
-  shell: helm list --deployed {% if helm_current_version.stdout.split('.')[0] != 'v2' %}--all-namespaces{% endif %} | grep '^prometheus-operator ' | wc -l
+  shell: helm list --deployed {% if helm_current_version.stdout.split('.')[0] != 'v2' %}--all-namespaces{% endif %} | grep '^prometheus-operator\s' | wc -l
   register: install_status
   changed_when: false
   become: true
