--- a/tasks/Linux/master-setup.yml
+++ b/tasks/Linux/master-setup.yml
@@ -90,7 +90,7 @@
   become: true
   when: helm_is_installed.rc == 0
 
-- name: Install tiller (helm v2)
+- name: Install tiller (only for helm v2)
   include_tasks: install-tiller.yml
   when:
     - helm_is_installed.rc == 0
