--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -32,13 +32,13 @@ kubernetes_calico_manifest_file: https://docs.projectcalico.org/manifests/calico
 kubernetes_helm_stable_repo_url: https://kubernetes-charts.storage.googleapis.com
 
 # Kubernetes components
-kubernetes_install_hostpath_provisioner: false
+kubernetes_install_hostpath_provisioner: true
 kubernetes_hostpath_provisioner_version: 0.2.9
 
-kubernetes_install_nginx_ingress: false
+kubernetes_install_nginx_ingress: true
 kubernetes_nginx_ingress_version: 1.41.2
 
-kubernetes_install_metrics_server: false
+kubernetes_install_metrics_server: true
 kubernetes_metrics_server_version: 2.11.1
 
 kubernetes_install_dashboard: false
