--- a/tasks/Linux/master-setup.yml
+++ b/tasks/Linux/master-setup.yml
@@ -96,9 +96,11 @@
     - helm_is_installed.rc == 0
     - helm_current_version.stdout.split('.')[0] == 'v2'
 
-- import_tasks: migrate-helm-releases.yml
-
 - import_tasks: add-helm-repos.yml
+
+- name: Migrate helm releases
+  include_tasks: migrate-helm-releases.yml
+  when: kubernetes_helm_migrate_releases | bool
 
 - name: Install hostpath-provisioner
   include_tasks: install-hostpath-provisioner.yml
