--- a/tasks/Linux/migrate-helm-releases.yml
+++ b/tasks/Linux/migrate-helm-releases.yml
@@ -18,6 +18,6 @@
       register: result
       changed_when: "'converted successfully' in result.stdout"
       failed_when: "result.rc != 0 and 'already exists' not in result.stderr"
-      when: helm_releases != ""
+      when: helm_releases.stdout != ""
   become: true
   when: helm_current_version.stdout.split('.')[0] > 'v2'
